Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-512

Fix c++ build on centos6.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.6.0
    • C++
    • None

    Description

      The c++ build is broken on centos 6.

      ```
      [ 34%] Building CXX object c++/src/CMakeFiles/orc.dir/io/InputStream.cc.o
      In file included from /root/orc/c++/include/orc/OrcFile.hh:25,
      from /root/orc/c++/src/io/InputStream.hh:23,
      from /root/orc/c++/src/io/InputStream.cc:20:
      /root/orc/c++/include/orc/Reader.hh:486: error: expected primary-expression before '{' token
      ```

      Attachments

        Issue Links

          Activity

            People

              omalley Owen O'Malley
              omalley Owen O'Malley
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m