ORC-512: Fix C++ build on CentOS 6.

Fixes #397

Signed-off-by: Owen O'Malley <omalley@apache.org>