c++/src/Adaptor.cc
@@ -64,3 +64,25 @@ ssize_t pread(int fd, void* buf, size_t size, off_t offset) {
     #error("pread() undefined: unknown environment")
   #endif
 #endif
+
+namespace orc {
+#ifdef HAS_DOUBLE_TO_STRING
+  std::string to_string(double val) {
+    return std::to_string(val);
+  }
+#else
+  std::string to_string(double val) {
+    return std::to_string(static_cast<long double>(val));
+  }
+#endif
+
+#ifdef HAS_INT64_TO_STRING
+  std::string to_string(int64_t val) {
+    return std::to_string(val);
+  }
+#else
+  std::string to_string(int64_t val) {
+    return std::to_string(static_cast<long long int>(val));
+  }
+#endif
+}
